src/objects/Tareas_Tipo_Trabajo__c.object
<CustomObject>
    <description>Objeto personalizado que representa el detalle de todas las tareas que están dentro de un tipo de trabajo</description>
    <fields>
        <fullName>TTT_LKP_Tipo_Trabajo__c</fullName>
        <description>Campo que relaciona la tarea de tipo de trabajo con el tipo de trabajo</description>
        <label>Tipo de trabajo</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Tareas de Tipo de Trabajo</relationshipLabel>
        <relationshipName>Tareas_Tipo_Trabajo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TTT_TXT_Baremo_Codigo__c</fullName>
        <description>Código de Baremo de la Tarea</description>
        <label>Código de Baremo</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTT_TXT_Identificador__c</fullName>
        <description>Identificador Externo exclusivo. Se establece con el valor del campo Name en el trigger.</description>
        <externalId>true</externalId>
        <label>Identificador (Ext Id)</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tarea de Tipo de Trabajo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Tarea de Tipo de Trabajo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tareas de Tipo de Trabajo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(TTT_TXT_Identificador__c ))),ISCHANGED(TTT_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK(TTT_TXT_Identificador__c),ISNULL( TTT_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>TTT_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>